# login

./: .gitignore  README.md  database.py  login.py  pyproject.toml  requirements.txt  schema.sql  server.py  server.sh  store.py  test.py  utils.py  uwsgi.ini
.github/workflows/: publish.yml
src/: __init__.py  access.py  endpoints.py  interface.py  login.py  schema.sql  server.py  store.py  test.py  utils.py
src/flask_modular_login/: __init__.py  access.py  builder.py  endpoints.py  group.py  interface.py  login.py  platforms.py  pubsub.py  schema.sql  server.py  store.py  test.py  tokens.py  utils.py
src/flask_modular_login/templates/: confirm.html  invite.html  login.html  options.html  preview.html  qr.html  remove.html  renege.html  sessions.html
src/templates/: login.html
templates/: login.html  sessions.html  test.html
