[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "flask-modular-login"
version = "0.1.0"
readme = "README.md"
dependencies = [
    "wheel",
    "flask",
    "flask-dance",
    "blinker",
    "flask-caching",
    "uwsgi",
    "libmc @ git+https://github.com/kentslaney/libmc",
    "cryptography",
    "requests",
    "websockets",
]
